# rust-recrutement-agency-backend

./: .env.example  COMPLETE_SETUP.md  Cargo.toml  Dockerfile  QUICK_START.md  README.md  database.sql  docker-compose.yml  install_postgresql.ps1  install_rust.ps1  run_local.bat  setup_database.bat  start.bat
src/: Cargo.toml  auth.rs  database.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  utils.rs
src/handlers/: auth.rs  clients.rs  jobs.rs  matching.rs  meetings.rs  mod.rs  workers.rs
tests/: integration_tests.rs
